# PaperAlgorithm2

./: README.md
demo/: CMakeLists.txt  benchmark_double_thrshold.cpp  benchmark_non_max_suppression.cpp  double_threshold.cpp  double_threshold.h  non_max_suppression.cpp  non_max_suppression.h  test_double_thrshold.cpp  test_non_max_suppression.cpp  testavx2intrics.cpp  testavx2intrics.h
fast-canny-jamie/: .gitignore  CMakeLists.txt  Pipfile
fast-canny-jamie/.devcontainer/: devcontainer.json
fast-canny-jamie/core/: CMakeLists.txt
fast-canny-jamie/core/src/: double_threshold.cpp  double_threshold.h  non_maxima_suppression.cpp  non_maxima_suppression.h
fast-canny-main/: README.md  download_coco_images.py
fast-canny-main/.devcontainer/: Dockerfile
fast-canny-main/benchmark/: CMakeLists.txt
fast-canny-main/benchmark/src/: gaussian_filter_benchmark.cpp  opencv_benchmark.cpp
fast-canny-main/core/: CMakeLists.txt
fast-canny-main/core/src/: double_threshold.cpp  double_threshold.h  gaussian_filter.cpp  gaussian_filter.h  main.cpp  non_maxima_suppression.cpp  non_maxima_suppression.h
